--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
-Flask
-pandas
-scikit-learn
-numpy
-python
-os
-joblib
+
+Flask==2.3.3
+flask-cors==3.0.10  
+
+
+numpy==1.27.5
+pandas==2.1.1
+scikit-learn==1.3.2
+scipy==1.11.1      
+
+joblib==1.3.2
